Bug 300555 - templates cause lost events and todos that cannot be accessed
Summary: templates cause lost events and todos that cannot be accessed
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Fedora RPMs Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-24 11:12 UTC by John Floyd
Modified: 2012-05-30 16:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description John Floyd 2012-05-24 11:12:50 UTC
It appears that the UID is written to the template and this is NOT updated when a template is used.

Looking at akonadi (or dumping to a ical file) shows that the entries that are lost are all in the dbase with the same UID then korganizer gets confused displaying them.

Is there any checking on loading the templates.  As discussed elsewhere, overwriting the dates is very annoying.  

Reproducible: Always

Steps to Reproduce:
1.create new todo or event
2.load template - add explicit data
3.save 
4 do this a number of times
5 click on one of the new items, all items just created get highlighted in the month view and all show the same data when expanded.
Actual Results:  
Effectively one new itemis accessable the rest are lost/hidden
Very frustrating

Expected Results:  
Each new item should be viewable abd ediitable

This has been happenig for a while. (possibly since 4.8)
Comment 1 Allen Winter 2012-05-24 21:07:04 UTC
I fixed this for KDE 4.8.2.
Comment 2 John Floyd 2012-05-28 11:09:50 UTC
Still broken at 4.8.3!  Causing continued grief.  Is happening  with new entries no tjust old ones.
Comment 3 Allen Winter 2012-05-30 15:27:10 UTC
John,

Ah, I see.

So you think if the template is saved without a UID: then this would fix the problem?  Looking at the code, that seems like the easiest fix.
Comment 4 Allen Winter 2012-05-30 15:42:34 UTC
I think I know what to do.

When loading the template and creating the new item, I will make sure to give that new item a brand new UID too.
Comment 5 Allen Winter 2012-05-30 16:01:43 UTC
Git commit 0da2f60c0db39ed3a4b161c25da17da7af38e389 by Allen Winter.
Committed on 30/05/2012 at 18:00.
Pushed by winterz into branch 'master'.

in loadTemplate(), give the newly created incidence its very own UID.
FIXED-IN: 4.8.4
MERGE: 4.8

M  +3    -1    incidenceeditor-ng/eventortododialog.cpp

http://commits.kde.org/kdepim/0da2f60c0db39ed3a4b161c25da17da7af38e389
Comment 6 Allen Winter 2012-05-30 16:02:24 UTC
Git commit 6ba4562a83734137ed326982d601ef3f25de2f88 by Allen Winter.
Committed on 30/05/2012 at 18:00.
Pushed by winterz into branch 'KDE/4.8'.

in loadTemplate(), give the newly created incidence its very own UID.
FIXED-IN: 4.8.4
MERGE: 4.8
(cherry picked from commit 0da2f60c0db39ed3a4b161c25da17da7af38e389)

M  +3    -1    incidenceeditor-ng/eventortododialog.cpp

http://commits.kde.org/kdepim/6ba4562a83734137ed326982d601ef3f25de2f88