in loadTemplate(), give the newly created incidence its very own UID.

BUG: 300555
FIXED-IN: 4.8.4
MERGE: 4.8